--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -71,7 +71,7 @@
                   <h1 class="modal-title fs-5" id="addModalLabel">Add Appeal</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form>
+                <form method="post">
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
@@ -102,11 +102,11 @@
                                 <label for="status">Status</label>
                             </div>
                             <div class="col-sm-10">
-                                <select class="form-select" id="status">
-                                    <option selected>Choose...</option>
-                                    <option value="pending">Pending</option>
-                                    <option value="approved">Approved</option>
-                                    <option value="disapproved">Disapproved</option>
+                                <select class="form-select" id="status" name="status">
+                                    <option selected value="">Choose...</option>
+                                    <option value="P">Pending</option>
+                                    <option value="A">Approved</option>
+                                    <option value="D">Disapproved</option>
                                 </select>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
                         </button>
-                        <button type="button" class="btn btn-primary">Add Appeal</button>
+                        <input type="submit" class="btn btn-primary" value="Add Appeal" onclick="javascript: form.action='/add-appeal'; form.method='post'">
                     </div>
                 </form>
               </div>
