--- a/templates/sentences.html
+++ b/templates/sentences.html
@@ -75,7 +75,7 @@
                   <h1 class="modal-title fs-5" id="addModalLabel">Add Sentence</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form>
+                <form method="post">
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
@@ -87,14 +87,22 @@
                         </div>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
-                                <label for="c_id">Sentence Type</label>
+                                <label for="c_id">Assigned Probation Officer ID</label>
                             </div>
                             <div class="col-sm-10">
-                                <select class="form-select" id="c_id">
-                                    <option selected>Choose...</option>
-                                    <option value="jail_pd">Jail Period</option>
-                                    <option value="house_arrest">House Arrest</option>
-                                    <option value="probation">Probation</option>
+                                <input type="text" name="p_id" id="p_id" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="sentence_type">Sentence Type</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="sentence_type" name="sentence_type">
+                                    <option selected value="">Choose...</option>
+                                    <option value="J">Jail Period</option>
+                                    <option value="H">House Arrest</option>
+                                    <option value="P">Probation</option>
                                 </select>
                             </div>
                         </div>
@@ -126,7 +134,7 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
                         </button>
-                        <button type="button" class="btn btn-primary">Add Sentence</button>
+                        <input type="submit" class="btn btn-primary" value="Add Sentence" onclick="javascript: form.action='/add-sentence'; form.method='post'">
                     </div>
                 </form>
               </div>
