--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -42,32 +42,38 @@
         </nav>
         <h1>Crimes</h1>
         <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Crime</a>
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">CR_ID</th>
-                    <th scope="col">C_ID</th>
-                    <th scope="col">Classification</th>
-                    <th scope="col">Date Charged</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Hearing Date</th>
-                    <th scope="col">Appeal Cutoff Date</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for crime in crimes %}
-                <tr>
-                    <th scope="row">{{ crime['Crime_ID'] }}</th>
-                    <td>{{ crime['Criminal_ID'] }}</td>
-                    <td>{{ crime['Classification'] }}</td>
-                    <td>{{ crime['Date_charged'] }}</td>
-                    <td>{{ crime['Status'] }}</td>
-                    <td>{{ crime['Hearing_date'] }}</td>
-                    <td>{{ crime['Appeal_cut_date'] }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <form method="post">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th scope="col">CR_ID</th>
+                        <th scope="col">C_ID</th>
+                        <th scope="col">Classification</th>
+                        <th scope="col">Date Charged</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Hearing Date</th>
+                        <th scope="col">Appeal Cutoff Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for crime in crimes %}
+                    <tr>
+                        <td><input type="checkbox" id="check{{ crime['Crime_ID'] }}" name="check{{ crime['Crime_ID'] }}" value="" class="form-check-input"></td>
+                        <th scope="row">{{ crime['Crime_ID'] }}</th>
+                        <td>{{ crime['Criminal_ID'] }}</td>
+                        <td>{{ crime['Classification'] }}</td>
+                        <td>{{ crime['Date_charged'] }}</td>
+                        <td>{{ crime['Status'] }}</td>
+                        <td>{{ crime['Hearing_date'] }}</td>
+                        <td>{{ crime['Appeal_cut_date'] }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <input type="submit" class="btn btn-danger" value="Delete Selected Crimes" onclick="javascript: form.action='/delete-crimes'; form.method='post'">
+        </form>
+        <!-- modal -->
         <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
