--- a/templates/probation_officers.html
+++ b/templates/probation_officers.html
@@ -42,38 +42,43 @@
         </nav>
         <h1>Probation Officers</h1>
         <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Probation Officer</a>
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">Probation ID</th>
-                    <th scope="col">First Name</th>
-                    <th scope="col">Last Name</th>
-                    <th scope="col">Street</th>
-                    <th scope="col">City</th>
-                    <th scope="col">State</th>
-                    <th scope="col">ZIP</th>
-                    <th scope="col">Phone</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for prob_officer in prob_officers %}
-                <tr>
-                    <th scope="row">{{ prob_officer["Prob_ID"] }}</th>
-                    <td>{{ prob_officer["First"] }}</td>
-                    <td>{{ prob_officer["Last"] }}</td>
-                    <td>{{ prob_officer["Street"] }}</td>
-                    <td>{{ prob_officer["City"] }}</td>
-                    <td>{{ prob_officer["State"] }}</td>
-                    <td>{{ prob_officer["ZIP"] }}</td>
-                    <td>{{ prob_officer["Phone"] }}</td>
-                    <td>{{ prob_officer["Email"] }}</td>
-                    <td>{{ prob_officer["Status"] }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <form method="post">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th scope="col">Probation ID</th>
+                        <th scope="col">First Name</th>
+                        <th scope="col">Last Name</th>
+                        <th scope="col">Street</th>
+                        <th scope="col">City</th>
+                        <th scope="col">State</th>
+                        <th scope="col">ZIP</th>
+                        <th scope="col">Phone</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for prob_officer in prob_officers %}
+                    <tr>
+                        <td><input type="checkbox" id="check" name="check{{ prob_officer['Prob_ID'] }}" value="check{{ prob_officer['Prob_ID'] }}"></td>
+                        <th scope="row">{{ prob_officer["Prob_ID"] }}</th>
+                        <td>{{ prob_officer["First"] }}</td>
+                        <td>{{ prob_officer["Last"] }}</td>
+                        <td>{{ prob_officer["Street"] }}</td>
+                        <td>{{ prob_officer["City"] }}</td>
+                        <td>{{ prob_officer["State"] }}</td>
+                        <td>{{ prob_officer["ZIP"] }}</td>
+                        <td>{{ prob_officer["Phone"] }}</td>
+                        <td>{{ prob_officer["Email"] }}</td>
+                        <td>{{ prob_officer["Status"] }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <input type="submit" class="btn btn-danger" value="Remove Probation Officer" onclick="javascript: form.action='/delete-probation-officer'; form.method='post'">
+        </form>
         <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
