--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -42,28 +42,34 @@
         </nav>
         <h1>Appeals</h1>
         <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Appeal</a>
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">Appeal ID</th>
-                    <th scope="col">Crime ID</th>
-                    <th scope="col">Filing Date</th>
-                    <th scope="col">Hearing Date</th>
-                    <th scope="col">Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for appeal in appeals %}
-                <tr>
-                    <th scope="row">{{ appeal["Appeal_ID"] }}</th>
-                    <td>{{ appeal["Crime_ID"] }}</td>
-                    <td>{{ appeal["Filing_date"] }}</td>
-                    <td>{{ appeal["Hearing_date"] }}</td>
-                    <td>{{ appeal["Status"] }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <form method="post">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <td></td>
+                        <th scope="col">Appeal ID</th>
+                        <th scope="col">Crime ID</th>
+                        <th scope="col">Filing Date</th>
+                        <th scope="col">Hearing Date</th>
+                        <th scope="col">Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for appeal in appeals %}
+                    <tr>
+                        <td><input type="checkbox" id="check{{ appeal['Appeal_ID'] }}" name="check{{ appeal['Appeal_ID'] }}" value=""></td>
+                        <th scope="row">{{ appeal["Appeal_ID"] }}</th>
+                        <td>{{ appeal["Crime_ID"] }}</td>
+                        <td>{{ appeal["Filing_date"] }}</td>
+                        <td>{{ appeal["Hearing_date"] }}</td>
+                        <td>{{ appeal["Status"] }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <input type="submit" class="btn btn-danger" value="Delete Appeals" onclick="javascript: form.action='/delete-appeals'; form.method='post'">
+        </form>
+        <!-- modal -->
         <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
