--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -60,7 +60,7 @@
                     {% for crime in crimes %}
                     <tr>
                         <td><input type="checkbox" id="check{{ crime['Crime_ID'] }}" name="check{{ crime['Crime_ID'] }}" value="" class="form-check-input"></td>
-                        <th scope="row">{{ crime['Crime_ID'] }}</th>
+                        <th scope="row"><a href="" data-bs-toggle="modal" data-bs-target="#editModal" onclick='javascript: showInfo({{ crime|tojson|safe }});'>{{ crime['Crime_ID'] }}</a></th>
                         <td>{{ crime['Criminal_ID'] }}</td>
                         <td>{{ crime['Classification'] }}</td>
                         <td>{{ crime['Date_charged'] }}</td>
@@ -152,6 +152,115 @@
               </div>
             </div>
           </div>
+          <!-- edit/view modal -->
+          <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="editModalLabel">Viewing Crime</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form method="post">
+                    <div class="modal-body">
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="c_id">Crime ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="cr_id" id="cr_id" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="c_id">Criminal in Question</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="c_id" id="c_id" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="classification">Classification</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="classification" name="classification">
+                                    <option selected value="">Choose...</option>
+                                    <option value="F">Felony</option>
+                                    <option value="M">Misdemeanor</option>
+                                    <option value="O">Other</option>
+                                    <option value="U">Undefined</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="date_charged">Date Charged</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="date_charged" id="date_charged" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="status">Status</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="status" name="status">
+                                    <option selected value="">Choose...</option>
+                                    <option value="CL">Closed</option>
+                                    <option value="CA">Can Appeal</option>
+                                    <option value="IA">In Appeal</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="hearing_date">Hearing Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="hearing_date" id="hearing_date" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="cutoff_date">Appeal Cutoff Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="cutoff_date" id="cutoff_date" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                        </button>
+                        <input type="submit" class="btn btn-primary" value="Add Crime" onclick="javascript: form.action='/add-crime'; form.method='post'">
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script>
+            function toYYYYmmdd(date) {
+                // via https://www.tutorialrepublic.com/faq/how-to-format-javascript-date-as-yyyy-mm-dd.php
+                var year = date.toLocaleString("default", { year: "numeric" });
+                var month = date.toLocaleString("default", { month: "2-digit" });
+                var day = date.toLocaleString("default", { day: "2-digit" });
+
+                var formattedDate = year + "-" + month + "-" + day;
+                return formattedDate
+            }
+
+            function showInfo(crime) {
+                var editForm = document.getElementById("editModal");
+                editForm.querySelector("#cr_id").value = crime['Crime_ID'];
+                editForm.querySelector("#c_id").value = crime['Criminal_ID'];
+                editForm.querySelector("#classification").value = crime['Classification'];
+                editForm.querySelector("#date_charged").valueAsDate = new Date(crime['Date_charged']);
+                editForm.querySelector("#status").value = crime['Status'];
+                editForm.querySelector("#hearing_date").valueAsDate = new Date(crime['Hearing_date']);
+                editForm.querySelector("#cutoff_date").valueAsDate = new Date(crime['Cutoff_date']);
+            }
+        </script>
     </body>
 </html>
