--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -167,7 +167,7 @@
                                 <label for="c_id">Crime ID</label>
                             </div>
                             <div class="col-sm-10">
-                                <input type="text" name="cr_id" id="cr_id" class="form-control">
+                                <input type="text" name="cr_id" id="cr_id" class="form-control" disabled>
                             </div>
                         </div>
                         <div class="row mb-3">
@@ -175,7 +175,7 @@
                                 <label for="c_id">Criminal in Question</label>
                             </div>
                             <div class="col-sm-10">
-                                <input type="text" name="c_id" id="c_id" class="form-control">
+                                <input type="text" name="c_id" id="c_id" class="form-control" disabled>
                             </div>
                         </div>
                         <div class="row mb-3">
@@ -233,7 +233,7 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
                         </button>
-                        <input type="submit" class="btn btn-primary" value="Add Crime" onclick="javascript: form.action='/add-crime'; form.method='post'">
+                        <input type="submit" class="btn btn-primary" value="Update Crime" onclick="javascript: form.action='/edit-crime'; form.method='post'">
                     </div>
                 </form>
               </div>
@@ -241,16 +241,6 @@
           </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script>
-            function toYYYYmmdd(date) {
-                // via https://www.tutorialrepublic.com/faq/how-to-format-javascript-date-as-yyyy-mm-dd.php
-                var year = date.toLocaleString("default", { year: "numeric" });
-                var month = date.toLocaleString("default", { month: "2-digit" });
-                var day = date.toLocaleString("default", { day: "2-digit" });
-
-                var formattedDate = year + "-" + month + "-" + day;
-                return formattedDate
-            }
-
             function showInfo(crime) {
                 var editForm = document.getElementById("editModal");
                 editForm.querySelector("#cr_id").value = crime['Crime_ID'];
@@ -259,7 +249,7 @@
                 editForm.querySelector("#date_charged").valueAsDate = new Date(crime['Date_charged']);
                 editForm.querySelector("#status").value = crime['Status'];
                 editForm.querySelector("#hearing_date").valueAsDate = new Date(crime['Hearing_date']);
-                editForm.querySelector("#cutoff_date").valueAsDate = new Date(crime['Cutoff_date']);
+                editForm.querySelector("#cutoff_date").valueAsDate = new Date(crime['Appeal_cut_date']);
             }
         </script>
     </body>
