--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -114,7 +114,7 @@
                         </div>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
-                                <label for="c_id">Criminal in Question</label>
+                                <label for="c_id">Criminal ID in Question</label>
                             </div>
                             <div class="col-sm-10">
                                 <input type="text" name="c_id" id="c_id" class="form-control">
@@ -201,7 +201,7 @@
                         </div>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
-                                <label for="c_id">Criminal in Question</label>
+                                <label for="c_id">Criminal ID in Question</label>
                             </div>
                             <div class="col-sm-10">
                                 <input type="text" name="c_id" id="c_id" class="form-control" readonly>
