--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -144,8 +144,9 @@
                             <div class="col-sm-2 col-form-label">
                                 <label for="alias">Alias</label>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-sm-10 input-group">
                                 <input type="text" name="alias" id="alias" class="form-control">
+                                <input type="text" name="a_id" id="a_id" class="form-control" placeholder="Alias ID">
                             </div>
                         </div>
                         <div class="row mb-3">
