--- a/templates/officers.html
+++ b/templates/officers.html
@@ -49,7 +49,10 @@
         </div>
         {% elif errors %}
         <div class="alert alert-danger" role="alert">
-            A simple failure alert—check it out!
+            Errors:
+            {%- for msg in errors %}
+                <li>{{ msg }}</li>
+            {% endfor -%}
         </div>
         {% endif %}
         {% endwith %}
